This is a patch that transforms trn 3.3 into trn 3.4.
This release supports XTHREAD, XOVER, XINDEX, LISTGROUP, faster XHDR
response from overview files, etc.

Once the source is patched you should re-run Configure, just to be
safe:

	Configure -r -e -d -s

should be reasonably fast.

Finally do a "make" and a "make install" and you're done.

See the file "NEW" for a list of what's new in trn 3.4.

If you plan to make trn on multiple machines see the Policy.sh file in
the hints subdirectory -- you can use this file to make configuring an
additional system or the mthreads package easier by putting it in the
hints directory of the freshly unpacked package and specifying it when
you specify the other hint files.

Wayne Davison
davison@borland.com

--- a/news/trn/INSTALL
+++ b/news/trn/INSTALL
@@ -53,7 +53,12 @@ Installation Instructions for trn 3.0:
     This will put trn, newsetup, newsgroups, Pnews, and Rnmail into a
     public directory (normally /usr/local/bin), and put a number of
     files into the private trn library (e.g. /usr/local/lib/trn).  It
-    also tries to put the trn man page in a reasonable place.
+    also tries to put the trn man page in a reasonable place.  One of
+    the installed scripts is "newsetup", which creates a .newsrc for a
+    user that doesn't have one.  This script reads the subscriptions
+    file from your news library directory or sends a LIST SUBSCRIPTIONS
+    command to your server to get the default list of newsgroups for a
+    new user.  If you don't like this, customize the script as desired.
 
 7)  Read the manual entry before running trn, or at least read the file
     NEW if you are already familiar with trn.  Those that are brand new
@@ -90,4 +95,4 @@ Installation Instructions for trn 3.0:
 
 	unipatch <patchfile | patch -p
 
-12) If you are going to hack on trn, please refer to rn's HACKERSGUIDE first.
+11) If you are going to hack on trn, please refer to rn's HACKERSGUIDE first.
