--- a/news/trn/trn.1
+++ b/news/trn/trn.1
@@ -1,4 +1,4 @@
-.\" $Id: trn.1,v 1.4 1993/11/17 23:04:08 nate Exp $
+.\" $Id: trn.1,v 1.5 1993/12/01 06:38:46 nate Exp $
 .\"
 .\" This software is Copyright 1991 by Stan Barber. 
 .\"
@@ -756,6 +756,14 @@ Scan read articles also.
 .Ip /pattern/c 8
 Make search case sensitive.
 Ordinarily upper- and lower-case are considered the same.
+.Ip /pattern/I 8
+Force the search to ignore the THRU line when executed as a memorized
+command.
+If the command portion is a selection command (i.\|e. it starts with
+a \*(L'+\*(R' or a \*(L'.\*(R') this is the default behavior.
+.Ip /pattern/N 8
+Force the search to NOT ignore the THRU line when executed as a memorized
+command (useful on selection commands -- see also \-k).
 .Ip "/pattern/modifiers:command{:command}" 8
 Apply the commands listed to articles matching the search command (possibly
 with h, a, or r modifiers).
@@ -1415,6 +1423,14 @@ tells trn to append all new, unsubscribed groups to the end of the .newsrc.
 .B \-j
 forces trn to leave control characters unmolested in messages.
 .TP 5
+.B \-k
+tells trn to ignore the THRU line when processing selection searches
+(i.\|e. searches with a command portion that starts with a \*(L'+\*(R'
+or a \*(L'.\*(R') in the memorized commands (aka kill files).
+This is turned on by default, so use
+.B +k
+if you want to turn it off.
+.TP 5
 .B \-l
 disables the clearing of the screen at the beginning of each
 article, in case you have a bizarre terminal.
@@ -1552,8 +1568,8 @@ You may wish to use the baud-rate switch modifier below to enable terse mode
 only at lower baud rates.
 .TP 5
 .B \-T
-allows you to type ahead of rn.
-Ordinarily rn will eat typeahead to prevent your autorepeating space bar from
+allows you to type ahead of trn.
+Ordinarily trn will eat typeahead to prevent your autorepeating space bar from
 doing a very frustrating thing when you accidentally hold it down.
 If you don't have a repeating space bar, or you are working at low baud
 rate, you can set this switch to prevent this behavior.
@@ -1807,7 +1823,7 @@ Full name (yours).
 .Ip %o 8
 Organization (yours).
 .Ip %O 8
-Original working directory (where you ran rn from).
+Original working directory (where you ran trn from).
 .Ip %p 8
 Your private news directory, normally ~/News.
 .Ip %P 8
@@ -1844,7 +1860,7 @@ The directory where thread files are placed.
 .Ip %x 8
 The news library directory.
 .Ip %X 8
-The rn library directory.
+The trn library directory.
 .Ip %z 8
 The length of the current article in bytes.
 .Ip %Z 8
@@ -1853,7 +1869,7 @@ The number of selected threads.
 Your home directory.
 .Ip %. 8
 The directory containing your dot files, which is your home directory unless
-the environment variable DOTDIR is defined when rn is invoked.
+the environment variable DOTDIR is defined when trn is invoked.
 .Ip %# 8
 The current count for a multi-file save, starting with 1.
 This value is incremented by one for each file saved or extracted within a
@@ -1983,7 +1999,7 @@ Distribution: %D
 .br
 Organization: %o
 .sp 1
-%i cancelled from rn.
+%i cancelled from trn.
 .Ip DOTDIR 8
 Where to find your dot files, if they aren't in your home directory.
 Can be interpolated using \*(L"%.\*(R".
@@ -2182,7 +2198,7 @@ Your newsgroup subscription list.
 Default: $HOME/.newsrc
 .Ip NNTPSERVER 8
 The hostname of your NNTPSERVER.
-[This does not apply unless you are running the NNTP version of rn.]
+[This does not apply unless you are running the NNTP version of trn.]
 .Sp
 Default: the hostname listed in the server file, usually
 /usr/local/lib/rn/server.
@@ -2597,7 +2613,7 @@ from start of session
 lock file so you don't screw up your
 .I .newsrc
 .Ip "%./.rnlast" 1.25i
-info from last run of rn
+info from last run of trn
 .Ip "%./.rnsoft" 1.25i
 soft pointers into /usr/lib/news/active to speed startup, synchronous with
 .I .newsrc
