Update zircon to version 1.14, add targets for building packages automagically.
This is the first step towards updating all or most of the tcl/tk tools.

--- a/net/zircon/CHANGES
+++ b/net/zircon/CHANGES
@@ -1,3 +1,105 @@
+Changes in 1.14
+
+1) Fixed problem with auto searching servers list
+
+2) Fixed problem with finger and Trace
+
+3) Changed Shift-double-click on line of text to do the equivalent of
+/whois nick nick. Stefke wanted to see the idle time for people.......
+
+4) Fixed the DCC send problems
+
+5) Added the Channel Sketch Pad feature (Channel->Draw to get it) No
+Draw disables this feature. Please do not use this in channels where
+there are non-zircon users. Communication is via "extra" ctcp commands
+and this will drive them nuts!!
+
+6) Added some special keyboard shortcuts in the channel entry field :
+nick msg<Meta-q> will send msg to nick
+nick<Meta-w> does a WHOIS nick
+nick<Shift-Meta-W> does a WHO nick
+(Obviously you dont type the <>s......)
+
+7) Added some special ZIRCON ctcp commands. These are to help with
+debugging the system and are not for general use.
+
+8) Fixed file dialog when directory was empty
+
+9) Fixed DCC window menus
+
+Changes in 1.12A
+
+1) Some people are supertitious.....
+
+Changes in 1.12
+
+1) DCC Chat interface should now be same as for other channels.
+
+2) By setting the port number in the servers data structure explicitly
+to {}, you ought to be able to access UNIX domain sockets rather than
+TCP sockets. I dont have a UNIX domain server to test this with.......
+
+3) You can now match input to channels on a line by line basis. You
+set this up in the field of the channelInfo structure after the
+channel bindings (this the tenth field counting from 1 I think). The
+format is thus
+
+{ {{{prefix pattern} {message pattern}} {cmd}} ....}
+
+Prefix Pattern matches the sender - .* matches everyone.
+
+4) The auto op feature of channels now works. You set up field 3 of
+the channelInfo to contain a list of nick!user@host patterns. If you
+are op Zircon will automatically op these people if they are not
+already ops. It does this after a random period time up (i.e.  it does
+it at the next time Zircon sends an ISON command......}
+
+5) Bug in ban+kick fixed - couldnt ban people with uppercase letters
+in their nicks.......
+
+6) Added Trace command to Users menu
+
+Changes in 1.11
+
+1) Control-click on the leave button will add the channel to the
+monitor list again after you leave.
+
+2) Fixed a problem when saving with no existing .zirconrc - another
+7.0 incompatibility with 6.7 *sigh*
+
+3) You can set the monitor variable to a list of channels you wish to
+monitor from startup and the monitorTime variable to the time between
+monitor updates. (Monitoring uses the NAMES IRC call and this can look
+like flooding if the interval is too short between calls)
+
+Changes in 1.10
+
+1) Channel windows will only iconify themselves when first opened if
+they are auto-join and pop-up.
+
+2) You can now monitor the membership of channels you are not on. Type
+the name in the channel entry box of the control window and select
+Channel/Monitor. The cancel button on the window that appears stops
+the monitoring, join joins the channel.
+
+3) Clicking the busy button will cause unsolicited Notices and
+Messages to be sent to the info window. Messages will be acknowledged
+with a Notice the content of which can be defined in the variable
+busyMessage.
+
+4) LIST now works again for people running tcl 7.0 - compatibility
+problem.
+
+5) Palette handling is different - clicking on a button inserts that
+charcater into where the focus is. This is not an unalloyed joy ether,
+but is probably more useful. This whole area will be improved in the
+future. I promise.
+
+6) The ignores variable has been withdrawn and a new ignore command
+introduced. If you have any ignires in your file resave your
+configuration.
+
+
 Changes in 1.09
 
 1) You can Finger users now. Meta-F wioll finger the selection and
