--- a/net/zircon/README
+++ b/net/zircon/README
@@ -1,4 +1,4 @@
-Zircon Release 1.09
+Zircon Release 1.14
 -----------------------
 
 This is a release of Zircon, an X11 interface to Internet Relay Chat.
@@ -12,12 +12,14 @@ improvements in the code will also be welcome. We are particularly
 interested in making the system useful for those users in groups where
 JIPS and other national character sets are used.
 
-Zircon was implemented as a way of learning tcl/tk and has taken about
-10 weeks to get to its current state of development. It has more
-features than you could possibly imagine and implements nearly
+Zircon was implemented as a way of learning tcl/tk and has taken a
+very short time to get to its current state of development. It has
+more features than you could possibly imagine and implements nearly
 everything that the irc II clients support as well as many other
-useful and interesting features. tcl/tk is a wonderful system and you
-need it on your machine *NOW*.
+useful and interesting features. This reflects the power of tcl/tk
+*not* the fact that I am a wonderful programmer (I am, but that is a
+side issue :-)) tcl/tk is a wonderful system and you need it on your
+machine *NOW*.
 
 Please send all reports, comments and suggestions to: 
 
@@ -44,15 +46,13 @@ REQUIREMENTS
 
 The software has been developed using:
 
-	tcl	Version 6.7		7.0b3
-	tk	Version 3.2		3.3b3
+	tcl	Version 6.7		7.0
+	tk	Version 3.2		3.3
 	tcl-dp	Version 1.0ak		2.0
 
-N.B. tcl-dp 2.0 HAS NOT BEEN OFFICIALLY RELEASED YET and so is not
-currently available!!!!
-
 You must have the dpwish program rather than the usual wish for zircon
-to be runnable.
+to be runnable. Please use tcl 7.0 if you can as support for 6.7
+features will be removed in future versions.
 
 tcl/tk is available from harbor.ecn.purdue.edu in the directory
 /pub/tcl. tcl-dp is available there also, but the latest version can
@@ -66,12 +66,19 @@ on a day to day basis.
 
 INSTALLATION
 
-Make sure you have tcl and tk installed and have built tcl-dp.  Edit
-the Makefile and configure the path to dpwish, the name of the
-directory where zircon files are going to live, and where you want the
-main program to go. Then type
+Make sure you have tcl and tk installed and have built tcl-dp.
+Edit the zircon Makefile and configure the path to dpwish, the name of
+the directory where zircon files are going to live, and where you want
+the main program to go. Then type
 
 	make install
+
+If you are on a Solaris system you may need the magic line
+
+LIBS= -lsocket -lnsl -lelf -lucb
+
+somewhere in your Makefiles and you may need to use gcc if you dont
+have cc.
 
 Now create a file called rc in the zircon directory. This acts as a
 system wide rc file for all zircon users. Minimally put in here the
@@ -119,7 +126,7 @@ KNOWN PROBLEMS
 
 2) SED is not supported. DCC Chat is supported directly within Zircon
 but Send and get require binary I/O and are provided using external
-programs. Error handling is rudimentary at the moment.
+programs.
 
 3) There is no JIPS support. In fact there are problems when you even
 attempt to join a group with JIPS characters in its name as tcl tries
@@ -128,6 +135,5 @@ version of tcl but it didnt help.
 
 4) Character escaping in the low level CTCP protocol is not done.
 
-5) There are some weird things that can happen with menu handling and
-when connections get closed suddenly. Some of these may be tcl/tk
-problems that will go when we move to the new release.
+5) There are some weird things that can happen with menu handling.
+These may be tk problems but are hard to isolate.
